package com.ds.highnoonblitz.model

enum class DeviceStatus {
    NOT_INITIALIZED,
    DISCONNECTED,
    IN_LOBBY,
    READY,
    IN_GAME,
    IN_GAME_WAITING
}
