package com.ds.highnoonblitz.model

enum class LobbyStatus {
    CREATED,
    STARTED,
}