package com.ds.highnoonblitz.model

class MyDevice : Device(){
    override fun toString(): String {
        return "MyDevice " + super.toString()
    }

}

